k8s-run/all-in-one.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: urlservice
  name: urlservice
  namespace: url
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  selector:
    matchLabels:
      app: urlservice
  template:
    metadata:
      labels:
        app: urlservice
    spec:
      containers:
      - name: urlservice
        image: singhujjwal/url-service:0.3
        command: ["uvicorn", "app.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
        workingDir: /app/
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/v1/urls/ready/
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "300Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: urlservice
  namespace: url
  labels:
    app.kubernetes.io/name: urlservice
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: urlservice

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-urlservice
  namespace: "url"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: url.k8s.singhjee.in
    http:
      paths:
      - path: /api/v1/urls/
        pathType: Prefix
        backend:
          service:
            name: urlservice
            port:
              number: 8000
